--- a/index.css
+++ b/index.css
@@ -129,7 +129,7 @@ section #videoDiv{
 
 
 
-    display: inline-block;  
+    display: none;  
     justify-content: center;
     line-height: 1em;
     position: absolute;
@@ -763,7 +763,7 @@ body{
     width: 100%;
 }
 
-@media(max-width:1300px)
+@media(max-width:500px)
 {
     .homepage-pic
     {
